# spec

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-go  Makefile  OWNERS  README.md  csi.mk  csi.proto  go.mod  go.sum  protoc.mk  spec.md  versioned.proto
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  support.md
.github/workflows/: build.yaml  codespell.yml
cmake/: csi-config.cmake.in
cxx/: csi.h.in
lib/go/: .gitignore  Gopkg.toml  Makefile  README.md  csi.pb.go  protoc-gen-go  protoc-gen-go-grpc  spec.sh
lib/go/csi/: csi.pb.go  csi_grpc.pb.go  csi_protoopaque.pb.go
lib/go/csi/v0/: csi.pb.go
lib/go/csi/v1/: csi.pb.go  versioned.pb.go
puml/: fig01-arch-cz.puml  fig02-arch-dczs.puml  fig03-arch-dczu.puml  fig04-vol-lifecycle-dyn.puml  fig05-vol-lifecycle-pre.puml  fig06-vol-lifecycle-contra.puml
